bugs, installed infer, now running checks

--- a/userspace/Makefile
+++ b/userspace/Makefile
@@ -10,6 +10,9 @@ main: dependencies
 	gcc -g -O2 -c main.c -g
 	gcc -g -O2 -o main main.o aont.o cauchy_rs.o speck.o -lkcapi -g
 
+infer:
+	make clean; infer-capture -- make; infer-analyze -- make
+
 test: dependencies
 	gcc -g -O2 -c main.c
 	gcc -g -O2 -o main main.o aont.o cauchy_rs.o speck.o -lkcapi
